PDF Viewer pinch zoom: Update state for zoom in following a zoom out.

If we pinch zoom out, we need to update the state we use to calculate
the translation of the PDF content if we proceed to zoom in during
the same gesture.

BUG=705586

Review-Url: https://codereview.chromium.org/2781613002
Cr-Commit-Position: refs/heads/master@{#460758}

Former-commit-id: 60f6a1eeebb81e29c0a6b351ed2e3c432787fbc4